--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -14,6 +14,7 @@ Not yet released.
 - username, db_name and password generators on all forms are now using unified fucnitons from `static/js/generator.js`.
 
 ### 🐛 Bug Fixes
+- [Bug in OpenPanel UI on /server/info - memory limits on plan are missing #771](https://github.com/stefanpejcic/OpenPanel/issues/771)
 - [Bug in OpenPanel UI on /mysql/wizard #752](https://github.com/stefanpejcic/OpenPanel/issues/752)
 - Fixed bug displaying html websites count on *OpenPanel > Auto Installer* page.
 - [Bug in OpenPanel UI on /mysql/phpmyadmin #761](https://github.com/stefanpejcic/OpenPanel/issues/761)
