--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -13,6 +13,7 @@ Not yet released.
 - *blacklist_useragents* setting is Off for new installations.
 - username, db_name and password generators on all forms are now using unified fucnitons from `static/js/generator.js`.
 - errors in *docker logs -f openpanel* are now always shown, regardless of dev_mode setting.
+- 'You are currently impersonating user..' message on OpenPanel UI is moved from header to footer.
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /server/info - memory limits on plan are missing #771](https://github.com/stefanpejcic/OpenPanel/issues/771)
