--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -1,4 +1,4 @@
-Not yet released.
+Released on November 15, 2025
 
 ### 💅 Polish
 - [WAF widget on Site Manager now displays number of challenged and blocked requests on this domain for the last 60 minutes](https://i.postimg.cc/jq7xfJ0C/wp-waf.png)
@@ -15,7 +15,8 @@ Not yet released.
 - errors in *docker logs -f openpanel* are now always shown, regardless of dev_mode setting.
 - 'You are currently impersonating user..' message on OpenPanel UI is moved from header to footer.
 - Added missing translations on AutoInstaller, Site Manager, Upload Files, Service.
-- SSE_wdget on OpenAdmin no longer uses SSE but ajax requests for polling resource usage from backend. 
+- SSE_wdget on OpenAdmin no longer uses SSE but ajax requests for polling resource usage from backend.
+- 'Recent' widget on OpenAdmin - session based.
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /server/info - memory limits on plan are missing #771](https://github.com/stefanpejcic/OpenPanel/issues/771)
