--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -25,6 +25,6 @@ Released on November 15, 2025
 - [Bug in OpenPanel UI on /mysql/phpmyadmin #761](https://github.com/stefanpejcic/OpenPanel/issues/761)
 - [Can't use single quotes (') on website description on Wordpress installation #763](https://github.com/stefanpejcic/OpenPanel/issues/763)
 - [Firewall has contradictory information, and displays an error when trying to change it #762](https://github.com/stefanpejcic/OpenPanel/issues/762)
-- Fixed error generating database backup for WordPress webiste from WP Manager: *Error during backup: Error: Backup request failed.*.
+- Fixed error generating database backup for WordPress website from WP Manager: *Error during backup: Error: Backup request failed.*.
 - [Several problems on Wordpress Delete #765](https://github.com/stefanpejcic/OpenPanel/issues/765)
 - Fixed bug in `opencli domain` command that caused wget to freeze if network is unreachable.
