--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -3,7 +3,7 @@ Released on November 15, 2025
 ### 💅 Polish
 - [WAF widget on Site Manager now displays number of challenged and blocked requests on this domain for the last 60 minutes](https://i.postimg.cc/jq7xfJ0C/wp-waf.png)
 - Added 'Visitors' widget to Site Manager - showing live visitors for the website.
-- Added [`terminal_timeout` setting](https://dev.openpanel.com/cli/config.html#terminal_timeout) allowing Administrators to specify max execution time for *OpenPanel > Docker > Terminal* commands.
+- Added [`terminal_timeout` setting](https://dev.openpanel.com/cli/config.html#terminal-timeout) allowing Administrators to specify max execution time for *OpenPanel > Docker > Terminal* commands.
 - Added [`activity_max_size_bytes` setting](https://dev.openpanel.com/cli/config.html#activity-max-size-bytes)allowing Administrators to set file size in bytes to keep for user's Activity Log.
 - *OpenPanel > Docker > Terminal* and *OpenAdmin > Advanced > Terminal* will now display info tooltip that terminal is non-interactive and show current `terminal_timeout` value.
 - [SSH connection is now validated before adding a slave DNS server in *OpenAdmin > Domains > DNS CLuster*](https://github.com/stefanpejcic/OpenPanel/discussions/756#discussioncomment-14882105).
