--- a/website/docs/changelog/1.6.9.md
+++ b/website/docs/changelog/1.6.9.md
@@ -1,3 +1,7 @@
 Not yet released.
 
+### 💅 Polish
+- Added more detailed error messages on auto-login from OpenAdmin to OpenPanel user.
+
+
 ### 🐛 Bug Fixes
