--- a/website/docs/changelog/1.6.9.md
+++ b/website/docs/changelog/1.6.9.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- Updated WP-CLI to support PHP 8.4
 - Added more detailed error messages on auto-login from OpenAdmin to OpenPanel user.
 
 
