--- a/website/docs/changelog/1.7.0.md
+++ b/website/docs/changelog/1.7.0.md
@@ -4,3 +4,4 @@ Not yet released.
 - ["Login as Admin" on Wordpress Manager general view doesn't work #772](https://github.com/stefanpejcic/OpenPanel/issues/772)
 - [Editing WordPress maintenance template produces errors #773](https://github.com/stefanpejcic/OpenPanel/issues/773)
 - [Error shown on toast after saving general settings on WordPress Manager #774](https://github.com/stefanpejcic/OpenPanel/issues/774)
+- [WordPress prettypermalinks not working on OpenLitespeed until its restarted #782](https://github.com/stefanpejcic/OpenPanel/issues/782)
