--- a/website/docs/changelog/1.7.0.md
+++ b/website/docs/changelog/1.7.0.md
@@ -1,5 +1,8 @@
 Not yet released.
 
+### 💅 Polish
+- Changing a domain’s PHP version via *OpenPanel > PHP > Settings* will now attempt to disable the previous version, provided it’s not used by any other domain and isn’t set as the default version.
+
 ### 🐛 Bug Fixes
 - ["Login as Admin" on Wordpress Manager general view doesn't work #772](https://github.com/stefanpejcic/OpenPanel/issues/772)
 - [WordPress prettypermalinks not working on OpenLitespeed until its restarted #782](https://github.com/stefanpejcic/OpenPanel/issues/782)
