--- a/website/docs/changelog/1.7.0.md
+++ b/website/docs/changelog/1.7.0.md
@@ -9,3 +9,4 @@ Not yet released.
 - [Editing WordPress maintenance template produces errors #773](https://github.com/stefanpejcic/OpenPanel/issues/773)
 - [Error shown on toast after saving general settings on WordPress Manager #774](https://github.com/stefanpejcic/OpenPanel/issues/774)
 - [WordPress Restore From Plesk to OpenPanel Causing Permission Issues and ERR_HTTP2_PROTOCOL_ERROR on Elementor #770](https://github.com/stefanpejcic/OpenPanel/issues/770)
+- Fixed bug with `opencli locale` script always initializing a locale instead of updating it, if command is run miltiple times.
