--- a/website/docs/changelog/1.7.0.md
+++ b/website/docs/changelog/1.7.0.md
@@ -12,3 +12,4 @@ Not yet released.
 - [Error shown on toast after saving general settings on WordPress Manager #774](https://github.com/stefanpejcic/OpenPanel/issues/774)
 - [WordPress Restore From Plesk to OpenPanel Causing Permission Issues and ERR_HTTP2_PROTOCOL_ERROR on Elementor #770](https://github.com/stefanpejcic/OpenPanel/issues/770)
 - Fixed bug with `opencli locale` script always initializing a locale instead of updating it, if command is run miltiple times.
+- Fixed bug with `opencli sentinel` failing to check actual caddy service status and send admin notification.
