--- a/website/docs/changelog/1.7.0.md
+++ b/website/docs/changelog/1.7.0.md
@@ -6,6 +6,7 @@ Not yet released.
 - Added a unified tempalte for '[Error establishing database connection message](https://openpanel.com/docs/articles/databases/error-establishing-a-database-connection)' on OpenAdmin > Users, Plans, Domains, New User, Import cPanel, DNS Zone Editor, Caddy Editor.
 - *OpenAdmin > Services > View Log Files* will now parse url for log_name and lines, example: http://demo.openpanel.org:2087/services/logs?log_name=Caddy%20Logs&lines=20
 - Removed classes from all input fields on OpenAdmin: `file:-my-2 file:-ml-2.5 file:cursor-pointer file:rounded-l-[5px] file:rounded-r-none file:border-0 file:px-3 file:py-2 file:outline-none focus:outline-none disabled:pointer-events-none file:disabled:pointer-events-none file:border-solid file:border-gray-300 file:bg-gray-50 file:text-gray-500 file:hover:bg-gray-100 file:dark:border-gray-800 file:dark:bg-gray-950 file:hover:dark:bg-gray-900/20 file:disabled:dark:border-gray-700 file:[border-inline-end-width:1px] file:[margin-inline-end:0.75rem] file:disabled:bg-gray-100 file:disabled:text-gray-500 file:disabled:dark:bg-gray-800`.
+- [Relax password validations on inputs #4](https://github.com/stefanpejcic/openadmin/pull/4) for OpenAdmin.
 
 ### 🐛 Bug Fixes
 - ["Login as Admin" on Wordpress Manager general view doesn't work #772](https://github.com/stefanpejcic/OpenPanel/issues/772)
