--- a/website/docs/changelog/1.7.0.md
+++ b/website/docs/changelog/1.7.0.md
@@ -9,6 +9,7 @@ Not yet released.
 - [Relax password validations on inputs #4](https://github.com/stefanpejcic/openadmin/pull/4) for OpenAdmin.
 
 ### 🐛 Bug Fixes
+- [Bug in OpenPanel UI on /file-manager/upload #783](https://github.com/stefanpejcic/OpenPanel/issues/783#event-21023211444)
 - ["Login as Admin" on Wordpress Manager general view doesn't work #772](https://github.com/stefanpejcic/OpenPanel/issues/772)
 - [WordPress prettypermalinks not working on OpenLitespeed until its restarted #782](https://github.com/stefanpejcic/OpenPanel/issues/782)
 - [Editing WordPress maintenance template produces errors #773](https://github.com/stefanpejcic/OpenPanel/issues/773)
