--- a/website/docs/changelog/1.7.0.md
+++ b/website/docs/changelog/1.7.0.md
@@ -18,3 +18,5 @@ Not yet released.
 - [WordPress Restore From Plesk to OpenPanel Causing Permission Issues and ERR_HTTP2_PROTOCOL_ERROR on Elementor #770](https://github.com/stefanpejcic/OpenPanel/issues/770)
 - Fixed bug with `opencli locale` script always initializing a locale instead of updating it, if command is run miltiple times.
 - Fixed bug with `opencli sentinel` failing to check actual caddy service status and send admin notification.
+- Fixed bug on *OpenAdmin > Settings > General* that always submitted the *Redirect* option.
+ 
