--- a/website/docs/changelog/1.7.0.md
+++ b/website/docs/changelog/1.7.0.md
@@ -9,6 +9,7 @@ Not yet released.
 - [Relax password validations on inputs #4](https://github.com/stefanpejcic/openadmin/pull/4) for OpenAdmin.
 - 'ssl' module is now available in the Community edition.
 - Added tooltips on *OpenAdmin > Settings > General*.
+- Added log options on SiteManager for Python & NodeJS applications: [view raw log, copy to clipboard, open in new tab](https://i.postimg.cc/QCJzGZLT/2025-11-19-15-31.png).
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /file-manager/upload #783](https://github.com/stefanpejcic/OpenPanel/issues/783#event-21023211444)
