--- a/website/docs/changelog/1.7.0.md
+++ b/website/docs/changelog/1.7.0.md
@@ -21,4 +21,5 @@ Not yet released.
 - Fixed bug with `opencli locale` script always initializing a locale instead of updating it, if command is run miltiple times.
 - Fixed bug with `opencli sentinel` failing to check actual caddy service status and send admin notification.
 - Fixed bug on *OpenAdmin > Settings > General* that always submitted the *Redirect* option.
+- [Bug in OpenPanel UI on /account/activity pagination #786](https://github.com/stefanpejcic/OpenPanel/issues/786)
  
