--- a/website/docs/changelog/1.7.0.md
+++ b/website/docs/changelog/1.7.0.md
@@ -11,6 +11,7 @@ Not yet released.
 - Added tooltips on *OpenAdmin > Settings > General* and *OpenAdmin > Plans > Edit*.
 - Added log options on SiteManager for Python & NodeJS applications: [view raw log, copy to clipboard, open in new tab](https://i.postimg.cc/QCJzGZLT/2025-11-19-15-31.png).
 - User's activity log will now indicate for autologin if it occured using openpanel API or OpenAdmin auto-login.
+- 'activity_items_per_page' value for new installations is increased from 25 to 100.
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /file-manager/upload #783](https://github.com/stefanpejcic/OpenPanel/issues/783#event-21023211444)
