--- a/website/docs/changelog/1.7.0.md
+++ b/website/docs/changelog/1.7.0.md
@@ -12,7 +12,8 @@ Not yet released.
 - Added log options on SiteManager for Python & NodeJS applications: [view raw log, copy to clipboard, open in new tab](https://i.postimg.cc/QCJzGZLT/2025-11-19-15-31.png).
 - User's activity log will now indicate for autologin if it occured using openpanel API or OpenAdmin auto-login.
 - 'activity_items_per_page' value for new installations is increased from 25 to 100.
-
+- Pressing **Enter** in the search input field under *OpenPanel > Account > Activity Log* will search all logs, while typing without pressing Enter will search only the rows on the current page.
+  
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /file-manager/upload #783](https://github.com/stefanpejcic/OpenPanel/issues/783#event-21023211444)
 - ["Login as Admin" on Wordpress Manager general view doesn't work #772](https://github.com/stefanpejcic/OpenPanel/issues/772)
