--- a/website/docs/changelog/1.7.0.md
+++ b/website/docs/changelog/1.7.0.md
@@ -13,6 +13,7 @@ Not yet released.
 - User's activity log will now indicate for autologin if it occured using openpanel API or OpenAdmin auto-login.
 - 'activity_items_per_page' value for new installations is increased from 25 to 100.
 - Pressing **Enter** in the search input field under *OpenPanel > Account > Activity Log* will search all logs, while typing without pressing Enter will search only the rows on the current page.
+- Start, Stopa nd Restart actions on any service in *OpenAdmin > Services > Status* will now block further actiosn on all other services.
   
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /file-manager/upload #783](https://github.com/stefanpejcic/OpenPanel/issues/783#event-21023211444)
