--- a/website/docs/changelog/1.7.0.md
+++ b/website/docs/changelog/1.7.0.md
@@ -14,6 +14,7 @@ Not yet released.
 - 'activity_items_per_page' value for new installations is increased from 25 to 100.
 - Pressing **Enter** in the search input field under *OpenPanel > Account > Activity Log* will search all logs, while typing without pressing Enter will search only the rows on the current page.
 - Start, Stopa nd Restart actions on any service in *OpenAdmin > Services > Status* will now block further actiosn on all other services.
+- Added timestamps in docker logs for openpanel service.
   
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /file-manager/upload #783](https://github.com/stefanpejcic/OpenPanel/issues/783#event-21023211444)
