--- a/website/docs/changelog/1.7.0.md
+++ b/website/docs/changelog/1.7.0.md
@@ -27,4 +27,6 @@ Not yet released.
 - Fixed bug with `opencli sentinel` failing to check actual caddy service status and send admin notification.
 - Fixed bug on *OpenAdmin > Settings > General* that always submitted the *Redirect* option.
 - [Bug in OpenPanel UI on /account/activity pagination #786](https://github.com/stefanpejcic/OpenPanel/issues/786)
+- Fixed bug on *OpenAdmin > Services > Status* that cuased G to be stripped from memory if limit was not an intiger.
+
  
