--- a/website/docs/changelog/1.7.1.md
+++ b/website/docs/changelog/1.7.1.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- Changing the default PHP version via *OpenPanel > PHP > Default version* will now attempt to disable the previous version, provided it’s not used by any other domain.
 - Upgraded ConfigServer Firewall & Security to [Sentinel Firewall](https://sentinelfirewall.org/).
 - Removed classes from all input fields on OpenPanel: `file:-my-2 file:-ml-2.5 file:cursor-pointer file:rounded-l-[5px] file:rounded-r-none file:border-0 file:px-3 file:py-2 file:outline-none focus:outline-none disabled:pointer-events-none file:disabled:pointer-events-none file:border-solid file:border-gray-300 file:bg-gray-50 file:text-gray-500 file:hover:bg-gray-100 file:dark:border-gray-800 file:dark:bg-gray-950 file:hover:dark:bg-gray-900/20 file:disabled:dark:border-gray-700 file:[border-inline-end-width:1px] file:[margin-inline-end:0.75rem] file:disabled:bg-gray-100 file:disabled:text-gray-500 file:disabled:dark:bg-gray-800`.
   
