--- a/website/docs/changelog/1.7.1.md
+++ b/website/docs/changelog/1.7.1.md
@@ -6,6 +6,7 @@ Not yet released.
 - Added option to set custom favicon in *OpenAdmin > Settings > OpenPanel*.
 - Removed classes from all input fields on OpenPanel: `file:-my-2 file:-ml-2.5 file:cursor-pointer file:rounded-l-[5px] file:rounded-r-none file:border-0 file:px-3 file:py-2 file:outline-none focus:outline-none disabled:pointer-events-none file:disabled:pointer-events-none file:border-solid file:border-gray-300 file:bg-gray-50 file:text-gray-500 file:hover:bg-gray-100 file:dark:border-gray-800 file:dark:bg-gray-950 file:hover:dark:bg-gray-900/20 file:disabled:dark:border-gray-700 file:[border-inline-end-width:1px] file:[margin-inline-end:0.75rem] file:disabled:bg-gray-100 file:disabled:text-gray-500 file:disabled:dark:bg-gray-800`.
 - Added random session secret keys for both OpenPanel and OpenAdmin UI.
+- Added .htaccess templates for WordPress (OpenLitespeed and Apache).
   
 ### 🐛 Bug Fixes
 - [No option to change SuperAdmin password #791](https://github.com/stefanpejcic/OpenPanel/issues/791)
