--- a/website/docs/changelog/1.7.1.md
+++ b/website/docs/changelog/1.7.1.md
@@ -8,6 +8,9 @@ Not yet released.
 - Added random session secret keys for both OpenPanel and OpenAdmin UI.
 - Added .htaccess templates for WordPress (OpenLitespeed and Apache).
 - *OpenAdmin > Users > single user* page will no longer display error *'str object' has no attribute 'disk_used'* if 'quotas' are not installed on the server.
+
+### 🚨 Security fixes
+- Remote code execution (RCE)* triggered by specially crafted HTTP requests that manipulate parameters passed to the server-side command wrapper.
   
 ### 🐛 Bug Fixes
 - [No option to change SuperAdmin password #791](https://github.com/stefanpejcic/OpenPanel/issues/791)
