--- a/website/docs/changelog/1.7.0.md
+++ b/website/docs/changelog/1.7.0.md
@@ -28,7 +28,7 @@ Released on November 20, 2025
 - Fixed bug on *OpenAdmin > Settings > General* that always submitted the *Redirect* option.
 - [Bug in OpenPanel UI on /account/activity pagination #786](https://github.com/stefanpejcic/OpenPanel/issues/786)
 - Fixed bug on *OpenAdmin > Services > Status* that caused *G* to be stripped from memory limit field if value was not an intiger.
-- Fixed js bug on *OpenPanel > Docker > Containers* that cause dhte input fields for CPU and RAM limits to not be editable.
+- Fixed js bug on *OpenPanel > Docker > Containers* that cause the input fields for CPU and RAM limits to not be editable.
 - Fixed 500 error on api call to `/api/account/activity`.
 
 
