--- a/website/docs/changelog/1.7.1.md
+++ b/website/docs/changelog/1.7.1.md
@@ -14,4 +14,5 @@ Not yet released.
 - Remote code execution (RCE)* triggered by specially crafted HTTP requests that manipulate parameters passed to the server-side command wrapper.
   
 ### 🐛 Bug Fixes
+- Fixed js bug on *OpenAdmin > Users > single user > Services* that cause the input fields for CPU and RAM limits to not be editable.
 - [No option to change SuperAdmin password #791](https://github.com/stefanpejcic/OpenPanel/issues/791)
