--- a/website/docs/changelog/1.7.1.md
+++ b/website/docs/changelog/1.7.1.md
@@ -9,7 +9,7 @@ Not yet released.
 - Added random session secret keys for both OpenPanel and OpenAdmin UI.
 - Added .htaccess templates for WordPress (OpenLitespeed and Apache).
 - *OpenAdmin > Users > single user* page will no longer display error *'str object' has no attribute 'disk_used'* if 'quotas' are not installed on the server.
-- `--no-ssh` flag is removed for new installations.
+- Improvements to the install script: `--no-ssh` flag is removed, --post-install` flag can now also contain url to download a bash file before executing it.
 
 ### 🚨 Security fixes
 - Remote code execution (RCE)* triggered by specially crafted HTTP requests that manipulate parameters passed to the server-side command wrapper.
