--- a/website/docs/changelog/1.7.1.md
+++ b/website/docs/changelog/1.7.1.md
@@ -11,6 +11,7 @@ Not yet released.
 - *OpenAdmin > Users > single user* page will no longer display error *'str object' has no attribute 'disk_used'* if 'quotas' are not installed on the server.
 - Improvements to the install script: `--no-ssh` flag is removed, --post-install` flag can now also contain url to download a bash file before executing it.
 - *OpenPanel > Advanced > Services* will no longer display disabled webservers and mysql type for the user.
+- *OpenAdmin > Advanced > Process Manager* now displays 'sorted by' in page title.
 
 ### 🚨 Security fixes
 - Remote code execution (RCE)* triggered by specially crafted HTTP requests that manipulate parameters passed to the server-side command wrapper.
