--- a/website/docs/changelog/1.7.1.md
+++ b/website/docs/changelog/1.7.1.md
@@ -19,3 +19,4 @@ Not yet released.
 ### 🐛 Bug Fixes
 - Fixed js bug on *OpenAdmin > Users > single user > Services* that cause the input fields for CPU and RAM limits to not be editable.
 - [No option to change SuperAdmin password #791](https://github.com/stefanpejcic/OpenPanel/issues/791)
+- [Bug in OpenAdmin UI on Password strength indicators - yellow css class missing #793](https://github.com/stefanpejcic/OpenPanel/issues/793)
