--- a/website/docs/changelog/1.7.1.md
+++ b/website/docs/changelog/1.7.1.md
@@ -12,6 +12,7 @@ Not yet released.
 - Improvements to the install script: `--no-ssh` flag is removed, --post-install` flag can now also contain url to download a bash file before executing it.
 - *OpenPanel > Advanced > Services* will no longer display disabled webservers and mysql type for the user.
 - *OpenAdmin > Advanced > Process Manager* now displays 'sorted by' in page title.
+- *OpenAdmin > Users > single user > Overview* now displays: user ID (UID), home directory, web server type, mysql type, varnish caching.
 
 ### 🚨 Security fixes
 - Remote code execution (RCE)* triggered by specially crafted HTTP requests that manipulate parameters passed to the server-side command wrapper.
