--- a/website/docs/changelog/1.7.1.md
+++ b/website/docs/changelog/1.7.1.md
@@ -1,4 +1,4 @@
-Not yet released.
+Released on November 25, 2025
 
 ### 💅 Polish
 - Changing the default PHP version via *OpenPanel > PHP > Default version* will now attempt to disable the previous version, provided it’s not used by any other domain.
