--- a/website/docs/changelog/1.7.1.md
+++ b/website/docs/changelog/1.7.1.md
@@ -13,6 +13,7 @@ Released on November 25, 2025
 - *OpenPanel > Advanced > Services* will no longer display disabled webservers and mysql type for the user.
 - *OpenAdmin > Advanced > Process Manager* now displays 'sorted by' in page title.
 - *OpenAdmin > Users > single user > Overview* now displays: user ID (UID), home directory, web server type, mysql type, varnish caching.
+- Added optional flags: `--admin` and `--cli` to [opencli update](https://dev.openpanel.com/cli/update.html)
 
 ### 🚨 Security fixes
 - Remote code execution (RCE)* triggered by specially crafted HTTP requests that manipulate parameters passed to the server-side command wrapper.
