--- a/website/docs/changelog/1.7.2.md
+++ b/website/docs/changelog/1.7.2.md
@@ -1,3 +1,6 @@
 Not yet released.
 
+### 💅 Polish
+- Added PHP 8.5 as option for default version in *OpenAdmin > Settings > Edit User Defaults*.
+
 ### 🐛 Bug Fixes
