--- a/website/docs/changelog/1.7.2.md
+++ b/website/docs/changelog/1.7.2.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - Added PHP 8.5 as option for default version in *OpenAdmin > Settings > Edit User Defaults*.
+- Default webserver for new installations is now Apache.
 - Varnish Caching is now disabled by default for new installations.
 
 ### 🐛 Bug Fixes
