--- a/website/docs/changelog/1.2.0.md
+++ b/website/docs/changelog/1.2.0.md
@@ -37,6 +37,6 @@ Released on April 08, 2025
 - [opencli email-server install freezes during Enterprise installation #382](https://github.com/stefanpejcic/OpenPanel/issues/382)
 - fixed bug with *opencli domains-docroot* command failing to create folder.
 - fixed breadcrumb bug on CronJobs Editor page.
-- fixed bug with `csrf_token` being added in enabeled_modules when Features are edited via OpenAdmin.
+- fixed bug with `csrf_token` being added in enabled_modules when Features are edited via OpenAdmin.
 - fixed broken link in sidebar menu for *VHosts File Editor*.
 - fixed css bugs with light color theme on 404 and 500 error pages on OpenAdmin and OpenPanel UI.
