--- a/website/docs/changelog/1.2.1.md
+++ b/website/docs/changelog/1.2.1.md
@@ -17,7 +17,7 @@ Released on April 11, 2025
 - fixed error on 404 template on OpenAdmin.
 - fixed missing crashreports when high load is detected.
 - fixed bug with heavy caching on *OpenPanel > FTP Accounts* causing data to be delayed for 30s.
-- fixed 500 error in *OpenPanel > FileManager* when downlaoding archive with wget.
+- fixed 500 error in *OpenPanel > FileManager* when downloading archive with wget.
 - fixed incorrect unit on *OpenPanel > MySQL Databases* caused by heavy caching.
 - fixed 500 error on *OpenPanel > MySQL Settings*.
 - fixed bug with install script setting 1.1.8 as the installed version. 
