--- a/website/docs/changelog/1.2.1.md
+++ b/website/docs/changelog/1.2.1.md
@@ -28,6 +28,6 @@ Released on April 11, 2025
 - [Correct Timezone not selected #380](https://github.com/stefanpejcic/OpenPanel/issues/380)
 - [Rename FTP sub-users on username rename #232](https://github.com/stefanpejcic/OpenPanel/issues/232)
 - [FTP Settings missing from UI #381](https://github.com/stefanpejcic/OpenPanel/issues/381)
-- fixed bug with the installs cript on cotnabo causing ipv6 to be used for downloading from github.
+- fixed bug with the install script on contabo causing ipv6 to be used for downloading from github.
 - fixed bug with basic_auth on OpenAmdin not enabled if configured directly in config file: */etc/openpanel/openadmin/config/admin.ini*
 - [WordPress Autoinstaller creates files and database but doesn't finish the installation #411](https://github.com/stefanpejcic/OpenPanel/issues/411)
