--- a/website/docs/changelog/1.2.2.md
+++ b/website/docs/changelog/1.2.2.md
@@ -22,7 +22,7 @@ Released on April 17, 2025
 ### 🐛 Bug Fixes
 - fixed bug with failing to create database on MariaDB during WordPress auto install
 - added proper error handling for errors from Google PageSpeed API.
-- fixed permissions issuse for php containers.
+- fixed permissions issue for php containers.
 - [OpenPanel DNS Editor DKIM Record doesn't wrap #418](https://github.com/stefanpejcic/OpenPanel/issues/418)
 - [Bug editing .JSON files viaMonaco Editor in OpenPanel > FileManager #395](https://github.com/stefanpejcic/OpenPanel/issues/395)
 - [Bug in OpenPanel UI on /cache/varnish #408](https://github.com/stefanpejcic/OpenPanel/issues/408)
