--- a/website/docs/changelog/1.2.2.md
+++ b/website/docs/changelog/1.2.2.md
@@ -32,7 +32,7 @@ Released on April 17, 2025
 - fixed bug with backups section not visible in the menu if FTP is not enabled.
 - [WordPress Auto installer didn't create database #407](https://github.com/stefanpejcic/OpenPanel/issues/407)
 - fixed error causing first and last item from enabled_modules to not be imported.
-- fixed bug detecting user's ip address jfrom ip.json file.
+- fixed bug detecting user's ip address from ip.json file.
 - fixed temporary link option not generating subdomain.
 - [Copy function not working in OpenPanel > File Manager #376](https://github.com/stefanpejcic/OpenPanel/issues/376)
 - fixed bug with permissions for opensearch container.
