--- a/website/docs/changelog/1.2.2.md
+++ b/website/docs/changelog/1.2.2.md
@@ -38,7 +38,7 @@ Released on April 17, 2025
 - fixed bug with permissions for opensearch container.
 - [WordPress autologin link leads to /none #412](https://github.com/stefanpejcic/OpenPanel/issues/412)
 - [Database wizard reports success even when MySQL container is not running #402](https://github.com/stefanpejcic/OpenPanel/issues/402)
-- fixed error *Failed to set ownership for the..* in FileManager for: create folder, ccreate file, download with wget, upload files.
+- fixed error *Failed to set ownership for the..* in FileManager for: create folder, create file, download with wget, upload files.
 - fixed bug enabling `usage` module in *OpenAdmin > Feature Manager*.
 - 
 
