--- a/website/docs/changelog/1.2.5.md
+++ b/website/docs/changelog/1.2.5.md
@@ -20,7 +20,7 @@ Released on April 29, 2025
 
 ### 🐛 Bug Fixes
 - fixed bug with [opencli proxy set](https://dev.openpanel.com/cli/proxy.html) preventing certain characters.
-- fixed bug saving email on *OpenAadmin > Notifications > Settings*.
+- fixed bug saving email on *OpenAdmin > Notifications > Settings*.
 - fixed bug with crons.ini missing for existing users: `cron  | read /crons.ini: is a directory`.
 - fixed bug with *OpenPanel > Crons* from not sending comments.
 - [No ports on /system/hosting/ports #377](https://github.com/stefanpejcic/OpenPanel/issues/377)
