--- a/website/docs/changelog/1.2.5.md
+++ b/website/docs/changelog/1.2.5.md
@@ -24,7 +24,7 @@ Released on April 29, 2025
 - fixed bug with crons.ini missing for existing users: `cron  | read /crons.ini: is a directory`.
 - fixed bug with *OpenPanel > Crons* from not sending comments.
 - [No ports on /system/hosting/ports #377](https://github.com/stefanpejcic/OpenPanel/issues/377)
-- fixed ccss bug with description field being required on new plan form.
+- fixed css bug with description field being required on new plan form.
 - fixed error *ZeroDivisionError: float division by zero* on *OpenAdmin > Users* when user has 0 limits.
 - fixed css bug with tabs on *OpenAdmin > Advanced > SSH*.
 - fixed bug causing delete actions from FileManager to be logged in activity logs with incorrect paths.
