--- a/website/docs/changelog/1.2.6.md
+++ b/website/docs/changelog/1.2.6.md
@@ -5,7 +5,7 @@ Released on May 2, 2025
 - [Testing user-backups in OpenPanel 0.2.5 #456](https://github.com/stefanpejcic/OpenPanel/issues/456)
 - [Backup and restore scripts for single user - full account #315](https://github.com/stefanpejcic/OpenPanel/issues/315)
 - [Improvements to WP installer [FEATURE REQUEST] #253](https://github.com/stefanpejcic/OpenPanel/issues/253)
-- Administrators can now edit managable services from *OpenAdmin > Services > Edit* page.
+- Administrators can now edit services from *OpenAdmin > Services > Edit* page.
 - optimized search on OpenAdmin.
 - `/json/docker-info` route is removed from OpenAdmin.
 - added link to manage rules from *OpenAdmin > Security > WAF*.
