--- a/website/docs/changelog/1.2.6.md
+++ b/website/docs/changelog/1.2.6.md
@@ -10,7 +10,7 @@ Released on May 2, 2025
 - `/json/docker-info` route is removed from OpenAdmin.
 - added link to manage rules from *OpenAdmin > Security > WAF*.
 - better logging for `/delete_file` from FileManager.
-- [crashlogs are now accessile trough notifications or *View Logs* page in OpenAdmin](https://i.postimg.cc/M6PLKzsT/2025-05-01-08-30.png).
+- [crashlogs are now accessible trough notifications or *View Logs* page in OpenAdmin](https://i.postimg.cc/M6PLKzsT/2025-05-01-08-30.png).
 - user creation via api no longer returns docker-compose version.
 - `/api/users` now also allows [setting *mysql_type* and *webserver*](/docs/articles/extensions/openpanel-and-fossbilling/#add-hosting-plan-for-openpanel).
 
@@ -27,7 +27,7 @@ Released on May 2, 2025
 - fixed js error on *OpenAdmin > Users > username > Activity* causing activity logs to not display.
 - fixed bug with `opencli sentinel` not recording hostname, load and mysql processes in crash reports.
 - fixed bug with `opencli sentinel` not restarting monitored system services.
-- fixed error starting dokcer after reboot on Alma 9.5: `error creating default "bridge" network: cannot create network`
+- fixed error starting docker after reboot on Alma 9.5: `error creating default "bridge" network: cannot create network`
 - [FOSSBilling False error on successfully created user #2](https://github.com/stefanpejcic/FOSSBilling-OpenPanel/issues/2)
 - [FOSSBilling User delete errors #3](https://github.com/stefanpejcic/FOSSBilling-OpenPanel/issues/3)
 
