--- a/website/docs/changelog/1.2.7.md
+++ b/website/docs/changelog/1.2.7.md
@@ -1,14 +1,14 @@
 Released on May 6, 2025
 
 ### 💅 Polish
-- added *Edit Domain Templates* page under *OpenAdmin > Domains* for editing html tempaltes and vhost files.
+- added *Edit Domain Templates* page under *OpenAdmin > Domains* for editing html templates and vhost files.
 - pm2 interface is removed and replaced with installer that allows users to run containerized nodejs or python apps.
 - added a new page in *OpenAdmin > Domains* to edit templates: Nginx/OpenResty/Apache VirtualHosts files, and HTML templates for: new domain, suspended website and suspended user.
 - `/sites/new` page is removed in favor of `/auto-installer`.
 - `/mautic`, `/pm2` and `/ip_blocker` pages are removed from OpenPanel search.
 - `/backups/settings` and `/backups/destination` pages are added in OpenPanel search.
 - `/get-folder-size` now accepts both relative and full paths with `/var/www/html/`.
-- bun, flarum, mautic and java are completelly removed from PM2.
+- bun, flarum, mautic and java are completely removed from PM2.
 - added cron for `opencli email-server pflogsumm` to generate email summary reports periodically.
 - timezone, ssh and webterminal modules are removed.
 - updated vhost templates to show custom page when domain is added without any files.
@@ -25,17 +25,17 @@ Released on May 6, 2025
 - [Mailserver: mail mount is not removed when deleting a domain #447](https://github.com/stefanpejcic/OpenPanel/issues/447)
 - [Crons don't appear on GUI #460](https://github.com/stefanpejcic/OpenPanel/issues/460)
 - [screenshot image loaded 3x in OpenPanel UI on /website #426](https://github.com/stefanpejcic/OpenPanel/issues/426)
-- [Bug adding docroot in OpenPanel in Cyrilic - not IDN #431](https://github.com/stefanpejcic/OpenPanel/issues/431)
+- [Bug adding docroot in OpenPanel in Cyrillic - not IDN #431](https://github.com/stefanpejcic/OpenPanel/issues/431)
 - [Delete email accounts on domain removal #233](https://github.com/stefanpejcic/OpenPanel/issues/233)
-- fixed bug with `"` showing around emabled modules on *OpenPanel > Advanced > Server Info*.
+- fixed bug with `"` showing around enabled modules on *OpenPanel > Advanced > Server Info*.
 - fixed error *Invalid folder path* on `/get-folder-size` for WP Manager.
-- fixed bug setting load, du and cpu tresholds on *OpenAdmin > Notifications* settings.
+- fixed bug setting load, du and cpu thresholds on *OpenAdmin > Notifications* settings.
 - [OpenPanel UI > Web Terminal keeps loading.. #359](https://github.com/stefanpejcic/OpenPanel/issues/359)
 - [remove backup jobs from daily usage reports #464](https://github.com/stefanpejcic/OpenPanel/issues/464)
 - fixed bug *Error fetching databases from the container.* on MySQL caused by missing env limits for CPU and Memory in template.
 - [Can not access through SSH anymore #367](https://github.com/stefanpejcic/OpenPanel/issues/367)
 - fixed bug with mailserver creating multiple mountpoints when domain is re-added.
 - fixed bug with email accounts still being listed in gui when domain is deleted.
-- fixed bug on domain creation failing to create sustom docroot.
+- fixed bug on domain creation failing to create custom docroot.
 - fixed bug connecting to SMTP locally from within the php containers.
 - fixed a bug with ssh login notifivations where the IP address was not correctly detected when multiple sessions were active.
