--- a/website/docs/changelog/1.2.7.md
+++ b/website/docs/changelog/1.2.7.md
@@ -38,4 +38,4 @@ Released on May 6, 2025
 - fixed bug with email accounts still being listed in gui when domain is deleted.
 - fixed bug on domain creation failing to create custom docroot.
 - fixed bug connecting to SMTP locally from within the php containers.
-- fixed a bug with ssh login notifivations where the IP address was not correctly detected when multiple sessions were active.
+- fixed a bug with ssh login notifications where the IP address was not correctly detected when multiple sessions were active.
