--- a/website/docs/changelog/1.2.9.md
+++ b/website/docs/changelog/1.2.9.md
@@ -20,7 +20,7 @@ Released on May 15, 2025
 - [Service php_fpm_8_3 does not have CPU or RAM limits defined #477](https://github.com/stefanpejcic/OpenPanel/issues/477)
 - [Service php_fpm_5_6 does not exist in the Docker Compose file #476](https://github.com/stefanpejcic/OpenPanel/issues/476)
 - fixed css bug opening edit plan dropdown on *OpenAdmin > Plans*.
-- fixed css bug with server hstname dispaly in OpenAdmin sidebar.
+- fixed css bug with server hostname dispaly in OpenAdmin sidebar.
 - fixed incorrect ip detection causing `Admin account X was accessed from a new IP address: 127.0.0.1` notification.
 - [No success notification in OpenPanel UI on /wordpress/install #481](https://github.com/stefanpejcic/OpenPanel/issues/481)
 - [Unable to change existing user package #485](https://github.com/stefanpejcic/OpenPanel/issues/485)
