--- a/website/docs/changelog/1.2.9.md
+++ b/website/docs/changelog/1.2.9.md
@@ -27,7 +27,7 @@ Released on May 15, 2025
 - fixed bug with [multiple swap notifications due to swap number in title of notification](https://i.postimg.cc/xTQVrbgp/2025-05-14-11-30.png)
 - [A timeout occurred when trying to access PHP extensions page #488](https://github.com/stefanpejcic/OpenPanel/issues/488)
 - [Unable to modify docker image tag #489](https://github.com/stefanpejcic/OpenPanel/issues/489)
-- [Hosting package UI limit incosistency #487](https://github.com/stefanpejcic/OpenPanel/issues/487)
+- [Hosting package UI limit inconsistency #487](https://github.com/stefanpejcic/OpenPanel/issues/487)
 - [Unable to change the allocate amount of any docker containers #492](https://github.com/stefanpejcic/OpenPanel/issues/492)
 - [Unable to update PHP Options #491](https://github.com/stefanpejcic/OpenPanel/issues/491)
 - [Initial limits for PHP in PHP Options and PHP Limits page have different values #490](https://github.com/stefanpejcic/OpenPanel/issues/490)
