--- a/website/docs/changelog/1.3.5.md
+++ b/website/docs/changelog/1.3.5.md
@@ -4,7 +4,7 @@ Released on June 02, 2025
 - [Search with filtering for File Manager](https://i.postimg.cc/M6Bt37vW/2025-05-30-20-58.png)
 - [Additional columns on File Manager table: owner, group links, link target, type](https://i.postimg.cc/TG8tL44h/2025-05-30-19-00.png)
 - The pagespeed data check on the WP manager will no longer retry every 15 seconds if the pagespeed API returns an error.
-- PM2, AutoInstaller, WordPress and Sites pages are now all located under Site mMnager in the sidebar menu.
+- PM2, AutoInstaller, WordPress and Sites pages are now all located under Site Manager in the sidebar menu.
 
 ### 🐛 Bug Fixes
 - fixed css bug with sidebar menu on light theme in OpenPanel UI.
