--- a/website/docs/changelog/1.3.5.md
+++ b/website/docs/changelog/1.3.5.md
@@ -9,5 +9,5 @@ Released on June 02, 2025
 ### 🐛 Bug Fixes
 - fixed css bug with sidebar menu on light theme in OpenPanel UI.
 - [IDN domain not displayed in OpenPanel UI in several pages #432](https://github.com/stefanpejcic/OpenPanel/issues/432)
-- fixed error detecting mysql datbase size on WP Manager.
+- fixed error detecting mysql database size on WP Manager.
 - [OpenPanel > SiteManager database backup error #379](https://github.com/stefanpejcic/OpenPanel/issues/379)
