--- a/website/docs/changelog/1.7.2.md
+++ b/website/docs/changelog/1.7.2.md
@@ -4,5 +4,6 @@ Not yet released.
 - Added PHP 8.5 as option for default version in *OpenAdmin > Settings > Edit User Defaults*.
 - Default webserver for new installations is now Apache.
 - Varnish Caching is now disabled by default for new installations.
+- Added [Google Safe Browsing status widget on WP Manager](https://i.postimg.cc/HnWTTjTd/2025-11-25-19-36.png).
 
 ### 🐛 Bug Fixes
