--- a/website/docs/changelog/1.7.2.md
+++ b/website/docs/changelog/1.7.2.md
@@ -6,5 +6,6 @@ Not yet released.
 - Varnish Caching is now disabled by default for new installations.
 - Added [Google Safe Browsing status widget on WP Manager](https://i.postimg.cc/HnWTTjTd/2025-11-25-19-36.png).
 - Added [option to disable Web Terminal feature in OpenAdmin](/docs/articles/dev-experience/disable-openadmin-web-terminal/).
+- Restart timeout on *OpenAdmin > License* after adding a license key is decreased from 30 to 10 sec.
 
 ### 🐛 Bug Fixes
