--- a/website/docs/changelog/1.7.3.md
+++ b/website/docs/changelog/1.7.3.md
@@ -1,3 +1,6 @@
 Not yet released.
 
+### 💅 Polish
+- Added [option to disable Server Reboot feature in OpenAdmin](/docs/articles/dev-experience/disable-openadmin-server-reboot/).
+
 ### 🐛 Bug Fixes
