--- a/website/docs/changelog/1.7.2.md
+++ b/website/docs/changelog/1.7.2.md
@@ -9,3 +9,4 @@ Not yet released.
 - Restart timeout on *OpenAdmin > License* after adding a license key is decreased from 30 to 10 sec.
 
 ### 🐛 Bug Fixes
+- Fixed error `name 'abort' is not defined` on *OpenAdmin > Server > Change Root Password*.
