--- a/website/docs/changelog/1.7.3.md
+++ b/website/docs/changelog/1.7.3.md
@@ -2,5 +2,6 @@ Not yet released.
 
 ### 💅 Polish
 - Added [option to disable Server Reboot feature in OpenAdmin](/docs/articles/dev-experience/disable-openadmin-server-reboot/).
+- Updated OpenAdmin UI to include missing page titles and breadcrumbs across all pages.
 
 ### 🐛 Bug Fixes
