--- a/website/docs/changelog/1.7.3.md
+++ b/website/docs/changelog/1.7.3.md
@@ -3,5 +3,7 @@ Not yet released.
 ### 💅 Polish
 - Added [option to disable Server Reboot feature in OpenAdmin](/docs/articles/dev-experience/disable-openadmin-server-reboot/).
 - Updated OpenAdmin UI to include missing page titles and breadcrumbs across all pages.
+- Added 'View Logs' link on *OpenAdmin > Emails > Email Settings*.
+- Log paths for *OpenAdmin > Services > Log Viewer* can now specify [container name instead fo path](https://github.com/stefanpejcic/openpanel-configuration/blob/main/openadmin/config/log_paths.json).
 
 ### 🐛 Bug Fixes
