--- a/website/docs/changelog/1.7.3.md
+++ b/website/docs/changelog/1.7.3.md
@@ -5,5 +5,6 @@ Not yet released.
 - Updated OpenAdmin UI to include missing page titles and breadcrumbs across all pages.
 - Added 'View Logs' link on *OpenAdmin > Emails > Email Settings*.
 - Log paths for *OpenAdmin > Services > Log Viewer* can now specify [container name instead fo path](https://github.com/stefanpejcic/openpanel-configuration/blob/main/openadmin/config/log_paths.json).
+- Admins can now edit the log files displayed in *OpenAdmin > Services > Log Viewer*  using the 'settings' button.
 
 ### 🐛 Bug Fixes
