--- a/website/docs/changelog/1.7.2.md
+++ b/website/docs/changelog/1.7.2.md
@@ -10,3 +10,4 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - Fixed error `name 'abort' is not defined` on *OpenAdmin > Server > Change Root Password*.
+- Fixed js error on PageSpeed widget in OpenPanel Site Manager that caused data to not be shown.
