--- a/website/docs/changelog/1.7.2.md
+++ b/website/docs/changelog/1.7.2.md
@@ -7,6 +7,7 @@ Not yet released.
 - Added [Google Safe Browsing status widget on WP Manager](https://i.postimg.cc/HnWTTjTd/2025-11-25-19-36.png).
 - Added [option to disable Web Terminal feature in OpenAdmin](/docs/articles/dev-experience/disable-openadmin-web-terminal/).
 - Restart timeout on *OpenAdmin > License* after adding a license key is decreased from 30 to 10 sec.
+- Enhanced WP Manager to deliver up to 300× faster response times on Debug, Update, and Maintenance tabs.
 
 ### 🐛 Bug Fixes
 - Fixed error `name 'abort' is not defined` on *OpenAdmin > Server > Change Root Password*.
