--- a/website/docs/changelog/1.7.2.md
+++ b/website/docs/changelog/1.7.2.md
@@ -10,6 +10,7 @@ Not yet released.
 - Enhanced WP Manager to deliver up to 300× faster response times on Debug, Update, and Maintenance tabs.
 
 ### 🐛 Bug Fixes
+- [CORS error when domain is set and custom screenshots and favicons APIs are used. #769](https://github.com/stefanpejcic/OpenPanel/discussions/769)
 - Fixed error `name 'abort' is not defined` on *OpenAdmin > Server > Change Root Password*.
 - Fixed js error on PageSpeed widget in OpenPanel Site Manager that caused data to not be shown.
 - Fixed css bug with input width on phpmyadmin and pgadmin pages.
