--- a/website/docs/changelog/1.7.2.md
+++ b/website/docs/changelog/1.7.2.md
@@ -8,6 +8,7 @@ Not yet released.
 - Added [option to disable Web Terminal feature in OpenAdmin](/docs/articles/dev-experience/disable-openadmin-web-terminal/).
 - Restart timeout on *OpenAdmin > License* after adding a license key is decreased from 30 to 10 sec.
 - Enhanced WP Manager to deliver up to 300× faster response times on Debug, Update, and Maintenance tabs.
+- 'password changed using email confirmation' is now logged in user's [activity log](/docs/panel/account/account_activity/).
 
 ### 🐛 Bug Fixes
 - [CORS error when domain is set and custom screenshots and favicons APIs are used. #769](https://github.com/stefanpejcic/OpenPanel/discussions/769)
