--- a/website/docs/changelog/1.7.2.md
+++ b/website/docs/changelog/1.7.2.md
@@ -11,6 +11,7 @@ Not yet released.
 - 'password changed using email confirmation' is now logged in user's [activity log](/docs/panel/account/account_activity/).
 
 ### 🐛 Bug Fixes
+- [Able to create admin/reseller in free tier #795](https://github.com/stefanpejcic/OpenPanel/issues/795)
 - [CORS error when domain is set and custom screenshots and favicons APIs are used. #769](https://github.com/stefanpejcic/OpenPanel/discussions/769)
 - Fixed error `name 'abort' is not defined` on *OpenAdmin > Server > Change Root Password*.
 - Fixed js error on PageSpeed widget in OpenPanel Site Manager that caused data to not be shown.
