--- a/website/docs/changelog/1.7.2.md
+++ b/website/docs/changelog/1.7.2.md
@@ -17,3 +17,4 @@ Not yet released.
 - Fixed js error on PageSpeed widget in OpenPanel Site Manager that caused data to not be shown.
 - Fixed css bug with input width on phpmyadmin and pgadmin pages.
 - Fixed error `ERROR 2026 (HY000): TLS/SSL error: SSL is required, but the server does not support it` when executing mysql operations on Debian13.
+- Fixed js bug on *OpenAdmin > Users > single user > Services* table with the `containerID` used in */stop/* and */terminal/* links.
