--- a/website/docs/changelog/1.7.2.md
+++ b/website/docs/changelog/1.7.2.md
@@ -9,6 +9,7 @@ Not yet released.
 - Restart timeout on *OpenAdmin > License* after adding a license key is decreased from 30 to 10 sec.
 - Enhanced WP Manager to deliver up to 300× faster response times on Debug, Update, and Maintenance tabs.
 - 'password changed using email confirmation' is now logged in user's [activity log](/docs/panel/account/account_activity/).
+- Added [log file for admin defined backups](https://openpanel.com/docs/articles/backups/configuring-backups/#1-admin-configured): `/var/log/openpanel/admin/docker-backup.log`
 
 ### 🐛 Bug Fixes
 - [Able to create admin/reseller in free tier #795](https://github.com/stefanpejcic/OpenPanel/issues/795)
