--- a/website/docs/changelog/1.7.2.md
+++ b/website/docs/changelog/1.7.2.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - Added PHP 8.5 as option for default version in *OpenAdmin > Settings > Edit User Defaults*.
+- [ioncube loader for php 5.6 7.0 7.1 7.2 7.3 7.4 8.1 8.2 8.3 8.4](https://github.com/stefanpejcic/openpanel-configuration/commit/d28d06dc5901dc34abb6350c2c032e68f60a9aa3)
 - Default webserver for new installations is now Apache.
 - Varnish Caching is now disabled by default for new installations.
 - Added [Google Safe Browsing status widget on WP Manager](https://i.postimg.cc/HnWTTjTd/2025-11-25-19-36.png).
