--- a/website/docs/changelog/1.7.2.md
+++ b/website/docs/changelog/1.7.2.md
@@ -1,4 +1,4 @@
-Not yet released.
+Released on December 02, 2025
 
 ### 💅 Polish
 - Added PHP 8.5 as option for default version in *OpenAdmin > Settings > Edit User Defaults*.
