--- a/website/docs/changelog/1.7.3.md
+++ b/website/docs/changelog/1.7.3.md
@@ -6,7 +6,7 @@ Not yet released.
 - Added 'View Logs' link on *OpenAdmin > Emails > Email Settings*.
 - Log paths for *OpenAdmin > Services > Log Viewer* can now specify [container name instead fo path](https://github.com/stefanpejcic/openpanel-configuration/blob/main/openadmin/config/log_paths.json).
 - Admins can now edit the log files displayed in *OpenAdmin > Services > Log Viewer*  using the 'settings' button.
-- Added check fr webmail domain: [check if domain is in use by system or user before saving](https://github.com/stefanpejcic/opencli/commit/e668a67df914b4026c0fb40894d6e55114abb950)
+- Added check for webmail domains: [check if domain is in use by system or user before saving](https://github.com/stefanpejcic/opencli/commit/e668a67df914b4026c0fb40894d6e55114abb950)
 
 
 ### 🐛 Bug Fixes
