--- a/website/docs/changelog/1.7.3.md
+++ b/website/docs/changelog/1.7.3.md
@@ -7,6 +7,6 @@ Not yet released.
 - Log paths for *OpenAdmin > Services > Log Viewer* can now specify [container name instead fo path](https://github.com/stefanpejcic/openpanel-configuration/blob/main/openadmin/config/log_paths.json).
 - Admins can now edit the log files displayed in *OpenAdmin > Services > Log Viewer*  using the 'settings' button.
 - Added check for webmail domains: [check if domain is in use by system or user before saving](https://github.com/stefanpejcic/opencli/commit/e668a67df914b4026c0fb40894d6e55114abb950)
-
+- Added a new [setting that determines where emails will be stored on the server](https://github.com/stefanpejcic/openpanel-configuration/commit/f1fd99600947e75a9ac84027ea9d4caa780d5f3e).
 
 ### 🐛 Bug Fixes
