--- a/website/docs/changelog/1.7.3.md
+++ b/website/docs/changelog/1.7.3.md
@@ -9,5 +9,8 @@ Not yet released.
 - Added check for webmail domains: [check if domain is in use by system or user before saving](https://github.com/stefanpejcic/opencli/commit/e668a67df914b4026c0fb40894d6e55114abb950)
 - Added a new [setting that determines where emails will be stored on the server](https://github.com/stefanpejcic/openpanel-configuration/commit/f1fd99600947e75a9ac84027ea9d4caa780d5f3e).
 - Removed `type="email"` for smtp_username field on *OpenAdmin > Settings > Notifications*.
+- If dev_mode is enabled, password will no longer be shown in openamdin error log when creating user via GUI.
 
 ### 🐛 Bug Fixes
+- Fixed 'Warning: invalid webserver type selected' when setting any webserver via *OpenAdmin > Users > New*.
+- 
