--- a/website/docs/changelog/1.7.3.md
+++ b/website/docs/changelog/1.7.3.md
@@ -10,6 +10,7 @@ Not yet released.
 - Added a new [setting that determines where emails will be stored on the server](https://github.com/stefanpejcic/openpanel-configuration/commit/f1fd99600947e75a9ac84027ea9d4caa780d5f3e).
 - Removed `type="email"` for smtp_username field on *OpenAdmin > Settings > Notifications*.
 - If dev_mode is enabled, password will no longer be shown in openamdin error log when creating user via GUI.
+- Sogo and SnappyMail are removed as webmail options.
 
 ### 🐛 Bug Fixes
 - Fixed 'Warning: invalid webserver type selected' when setting any webserver via *OpenAdmin > Users > New*.
