--- a/website/docs/changelog/1.7.3.md
+++ b/website/docs/changelog/1.7.3.md
@@ -13,5 +13,6 @@ Not yet released.
 - Sogo and SnappyMail are removed as webmail options.
 
 ### 🐛 Bug Fixes
+- [mailserver files are missing SSL configuration #799](https://github.com/stefanpejcic/OpenPanel/issues/799)
 - Fixed 'Warning: invalid webserver type selected' when setting any webserver via *OpenAdmin > Users > New*.
 - 
