--- a/website/docs/changelog/1.7.3.md
+++ b/website/docs/changelog/1.7.3.md
@@ -15,4 +15,5 @@ Not yet released.
 ### 🐛 Bug Fixes
 - [mailserver files are missing SSL configuration #799](https://github.com/stefanpejcic/OpenPanel/issues/799)
 - Fixed 'Warning: invalid webserver type selected' when setting any webserver via *OpenAdmin > Users > New*.
+- Fixed bug *Service 'mariadb' does not exist.* on Services > MariaDB.
 - 
