--- a/website/docs/changelog/1.7.3.md
+++ b/website/docs/changelog/1.7.3.md
@@ -16,4 +16,4 @@ Not yet released.
 - [mailserver files are missing SSL configuration #799](https://github.com/stefanpejcic/OpenPanel/issues/799)
 - Fixed 'Warning: invalid webserver type selected' when setting any webserver via *OpenAdmin > Users > New*.
 - Fixed bug *Service 'mariadb' does not exist.* on Services > MariaDB.
-- Fixed redirect issues for new WP installations caused by [.htaccess template for WP Manager](https://github.com/stefanpejcic/openpanel-configuration/commit/57259d359e093669a5221eb3b88e9aa2ba7f5f52).
+- Fixed redirect issues for new WP installations on Apache caused by [.htaccess template for WP Manager](https://github.com/stefanpejcic/openpanel-configuration/commit/57259d359e093669a5221eb3b88e9aa2ba7f5f52).
