--- a/website/docs/changelog/1.7.3.md
+++ b/website/docs/changelog/1.7.3.md
@@ -1,4 +1,4 @@
-Not yet released.
+Released on December 13, 2025
 
 ### 💅 Polish
 - Added [option to disable Server Reboot feature in OpenAdmin](/docs/articles/dev-experience/disable-openadmin-server-reboot/).
