--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -1,5 +1,8 @@
 Not yet released.
 
+### 💅 Polish
+- [`/api/domains` and `/api/domains/new`](https://dev.openpanel.com/openpanel-api/#Domains)
+
 ### 🐛 Bug Fixes
 - [Enabling/Disabling Redis gives error 500 #807](https://github.com/stefanpejcic/OpenPanel/issues/807)
 - [Reseller accounts page gives 404 error #806](https://github.com/stefanpejcic/OpenPanel/issues/806)
