--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -1,7 +1,8 @@
 Not yet released.
 
 ### 💅 Polish
-- [`/api/domains` and `/api/domains/new`](https://dev.openpanel.com/openpanel-api/#Domains)
+- OpenPanel API Endpoints: [`/api/domains` and `/api/domains/new`](https://dev.openpanel.com/openpanel-api/#Domains)
+- OpenAdmin API Endpoints: [`/api/domains`](https://dev.openpanel.com/openadmin-api/domains.html)
 
 ### 🐛 Bug Fixes
 - [Enabling/Disabling Redis gives error 500 #807](https://github.com/stefanpejcic/OpenPanel/issues/807)
