--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -1,7 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
-- OpenPanel API Endpoints: [`/api/domains` and `/api/domains/new`](https://dev.openpanel.com/openpanel-api/#Domains)
+- OpenPanel API Endpoints: [`/api/domains`, `/api/domains/new`, `/api/domains/delete`](https://dev.openpanel.com/openpanel-api/#Domains)
 - OpenAdmin API Endpoints: [`/api/domains`, `/api/domains/new`, `/api/domains/suspend/`, `/api/domains/usnsuspend/`, `/api/domains/delete/`](https://dev.openpanel.com/openadmin-api/domains.html)
 
 ### 🐛 Bug Fixes
