--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- [Add Domain related actions to API [FEATURE REQUEST] #809](https://github.com/stefanpejcic/OpenPanel/issues/809)
 - OpenPanel API Endpoints: [`/api/domains`, `/api/domains/new`, `/api/domains/delete`](https://dev.openpanel.com/openpanel-api/#Domains)
 - OpenAdmin API Endpoints: [`/api/domains`, `/api/domains/new`, `/api/domains/suspend/`, `/api/domains/usnsuspend/`, `/api/domains/delete/`](https://dev.openpanel.com/openadmin-api/domains.html)
 
