--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -6,5 +6,6 @@ Not yet released.
 - OpenAdmin API Endpoints: [`/api/domains`, `/api/domains/new`, `/api/domains/suspend/`, `/api/domains/usnsuspend/`, `/api/domains/delete/`](https://dev.openpanel.com/openadmin-api/domains.html)
 
 ### 🐛 Bug Fixes
+- [2FA not working with Authy #805](https://github.com/stefanpejcic/OpenPanel/issues/805)
 - [Enabling/Disabling Redis gives error 500 #807](https://github.com/stefanpejcic/OpenPanel/issues/807)
 - [Reseller accounts page gives 404 error #806](https://github.com/stefanpejcic/OpenPanel/issues/806)
