--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -4,6 +4,7 @@ Not yet released.
 - [Add Domain related actions to API [FEATURE REQUEST] #809](https://github.com/stefanpejcic/OpenPanel/issues/809)
 - OpenPanel API Endpoints: [`/api/domains`, `/api/domains/new`, `/api/domains/delete`](https://dev.openpanel.com/openpanel-api/#Domains)
 - OpenAdmin API Endpoints: [`/api/domains`, `/api/domains/new`, `/api/domains/suspend/`, `/api/domains/usnsuspend/`, `/api/domains/delete/`](https://dev.openpanel.com/openadmin-api/domains.html)
+- [View all graphs all at once on Resource Usage page [FEATURE REQUEST] #808](https://github.com/stefanpejcic/OpenPanel/issues/808)
 
 ### 🐛 Bug Fixes
 - [Pagination bug on Resource Usage History #810](https://github.com/stefanpejcic/OpenPanel/issues/810)
