--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -7,6 +7,7 @@ Not yet released.
 - [View all graphs all at once on Resource Usage page [FEATURE REQUEST] #808](https://github.com/stefanpejcic/OpenPanel/issues/808)
 
 ### 🐛 Bug Fixes
+- [CPU usage progress bar doesn't match percentage #815](https://github.com/stefanpejcic/OpenPanel/issues/815)
 - [Pagination bug on Resource Usage History #810](https://github.com/stefanpejcic/OpenPanel/issues/810)
 - [2FA not working with Authy #805](https://github.com/stefanpejcic/OpenPanel/issues/805)
 - [Enabling/Disabling Redis gives error 500 #807](https://github.com/stefanpejcic/OpenPanel/issues/807)
