--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -13,3 +13,4 @@ Not yet released.
 - [Enabling/Disabling Redis gives error 500 #807](https://github.com/stefanpejcic/OpenPanel/issues/807)
 - [Reseller accounts page gives 404 error #806](https://github.com/stefanpejcic/OpenPanel/issues/806)
 - [Fixed bug in `user-add` script](https://github.com/stefanpejcic/opencli/commit/b23d7f452c7604c23cf42edaa605600513dc3d79) rounding down GB, so 5.8GB was showing as 5 instead of 6G.
+- Fixed bug authenticating using JWT in user panel, due to JWT version missmatch.
