--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -7,6 +7,7 @@ Not yet released.
 - [View all graphs all at once on Resource Usage page [FEATURE REQUEST] #808](https://github.com/stefanpejcic/OpenPanel/issues/808)
 - removed `email` input type for username field on *OpenAdmin > Settings > Notifications*.
 - [PHP 8.5 is now the default version for new installations](https://github.com/stefanpejcic/openpanel-configuration/commit/c7328d92f0fed19321c089601820d97e03911008)
+- removed 'new' badge from *Recent* on OpenAdmin sidebar.
 
 ### 🐛 Bug Fixes
 - [CPU usage progress bar doesn't match percentage #815](https://github.com/stefanpejcic/OpenPanel/issues/815)
