--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -20,3 +20,4 @@ Not yet released.
 - [Fixed bug in `user-add` script](https://github.com/stefanpejcic/opencli/commit/b23d7f452c7604c23cf42edaa605600513dc3d79) rounding down GB, so 5.8GB was showing as 5 instead of 6G.
 - Fixed bug authenticating using JWT in user panel, due to JWT version missmatch.
 - Fixed bug on user delete that failed to kill all user processes if username was changed.
+- [CPANEL IMPORT: Crontab supports seconds, so add one more * on import #26](https://github.com/stefanpejcic/cPanel-to-OpenPanel/issues/26)
