--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -21,3 +21,5 @@ Not yet released.
 - Fixed bug authenticating using JWT in user panel, due to JWT version missmatch.
 - Fixed bug on user delete that failed to kill all user processes if username was changed.
 - [CPANEL IMPORT: Crontab supports seconds, so add one more * on import #26](https://github.com/stefanpejcic/cPanel-to-OpenPanel/issues/26)
+- [Fixed bug setting litespeed as webserver](https://github.com/stefanpejcic/opencli/commit/3c8a3e49241c0c8527f74a7002f84348c12b4560)
+- 
