--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -22,4 +22,5 @@ Not yet released.
 - Fixed bug on user delete that failed to kill all user processes if username was changed.
 - [CPANEL IMPORT: Crontab supports seconds, so add one more * on import #26](https://github.com/stefanpejcic/cPanel-to-OpenPanel/issues/26)
 - [Fixed bug setting litespeed as webserver](https://community.openpanel.org/d/239-no-such-container-openlitespeed/5)
+- [Install script now handles if `/etc/hosts` is missing](https://community.openpanel.org/d/235-caddy-restarting-when-etchosts-is-missing)
 - 
