--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -12,6 +12,7 @@ Not yet released.
 - Improvements to *OpenAdmin> Domains* page.
 
 ### 🐛 Bug Fixes
+- [False-positive messages for admin logins when behind Cloudflare proxy #819](https://github.com/stefanpejcic/OpenPanel/issues/819)
 - [CPU usage progress bar doesn't match percentage #815](https://github.com/stefanpejcic/OpenPanel/issues/815)
 - [Pagination bug on Resource Usage History #810](https://github.com/stefanpejcic/OpenPanel/issues/810)
 - [2FA not working with Authy #805](https://github.com/stefanpejcic/OpenPanel/issues/805)
