--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -10,6 +10,7 @@ Not yet released.
 - [PHP 8.5 is now the default version for new installations](https://github.com/stefanpejcic/openpanel-configuration/commit/c7328d92f0fed19321c089601820d97e03911008)
 - removed 'new' badge from *Recent* on OpenAdmin sidebar.
 - Improvements to *OpenAdmin> Domains* page.
+- [Added an option to add domains from OpenAdmin](https://i.postimg.cc/V1hRyC2v/2025-12-29-15-11.png).
 
 ### 🐛 Bug Fixes
 - [False-positive messages for admin logins when behind Cloudflare proxy #819](https://github.com/stefanpejcic/OpenPanel/issues/819)
