--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -14,6 +14,7 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [False-positive messages for admin logins when behind Cloudflare proxy #819](https://github.com/stefanpejcic/OpenPanel/issues/819)
+- [Changing pgAdmin email & password gives HTTP 500 error #816](https://github.com/stefanpejcic/OpenPanel/issues/816)
 - [AutoInstaller fails when using Apache #820](https://github.com/stefanpejcic/OpenPanel/issues/820)
 - [CPU usage progress bar doesn't match percentage #815](https://github.com/stefanpejcic/OpenPanel/issues/815)
 - [Pagination bug on Resource Usage History #810](https://github.com/stefanpejcic/OpenPanel/issues/810)
