--- a/website/docs/changelog/1.7.4.md
+++ b/website/docs/changelog/1.7.4.md
@@ -13,6 +13,7 @@ Not yet released.
 - [Added an option to add domains from OpenAdmin](https://i.postimg.cc/V1hRyC2v/2025-12-29-15-11.png).
 
 ### 🐛 Bug Fixes
+- [Varnish status per domain cannot be changed (ON/OFF not working) #823](https://github.com/stefanpejcic/OpenPanel/issues/823)
 - [WP Manager > Scan: login plugin did not install #814](https://github.com/stefanpejcic/OpenPanel/issues/814)
 - [False-positive messages for admin logins when behind Cloudflare proxy #819](https://github.com/stefanpejcic/OpenPanel/issues/819)
 - [Changing pgAdmin email & password gives HTTP 500 error #816](https://github.com/stefanpejcic/OpenPanel/issues/816)
