--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -1,3 +1,4 @@
 Not yet released.
 
 ### 🐛 Bug Fixes
+- [Bug displaying progress for wget #818](https://github.com/stefanpejcic/OpenPanel/issues/818#event-21795034137)
